WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 80049
Fix a warning in InputHandler::learnText()
https://bugs.webkit.org/show_bug.cgi?id=80049
Summary
Fix a warning in InputHandler::learnText()
Jacky Jiang
Reported
2012-03-01 14:30:16 PST
Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp: In member function 'void BlackBerry::WebKit::InputHandler::learnText()': Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp:375:38: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
Attachments
Patch
(1.94 KB, patch)
2012-03-01 14:52 PST
,
Jacky Jiang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-03-01 14:52:28 PST
Created
attachment 129753
[details]
Patch
WebKit Review Bot
Comment 2
2012-03-02 00:55:20 PST
Comment on
attachment 129753
[details]
Patch Clearing flags on attachment: 129753 Committed
r109526
: <
http://trac.webkit.org/changeset/109526
>
WebKit Review Bot
Comment 3
2012-03-02 00:55:24 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug