Fix a warning in InputHandler::learnText() https://bugs.webkit.org/show_bug.cgi?id=80049

Patch by Jacky Jiang <zhajiang@rim.com> on 2012-03-02
Reviewed by Antonio Gomes.

Fix a warning of the comparison "textInField.length() <=
MaxLearnTextDataSize" in InputHandler::learnText().

Rubber-stamped internally by Mike Fenton.

* WebKitSupport/InputHandler.cpp:
(BlackBerry::WebKit::InputHandler::learnText):

git-svn-id: svn://svn.chromium.org/blink/trunk@109526 bbb929c8-8fbe-4397-9dbb-9b2b20218538