third_party/WebKit/Source/WebKit/blackberry/WebKitSupport/InputHandler.cpp
@@ -65,7 +65,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #define ENABLE_INPUT_LOG 0
 #define ENABLE_FOCUS_LOG 0
 
-static const int MaxLearnTextDataSize = 500;
+static const unsigned MaxLearnTextDataSize = 500;
 
 using namespace BlackBerry::Platform;
 using namespace WebCore;
@@ -369,7 +369,7 @@ void InputHandler::learnText()
         return;
 
     String textInField(elementText());
-    textInField = textInField.substring(std::max(0, static_cast<int>(textInField.length()) - MaxLearnTextDataSize), textInField.length());
+    textInField = textInField.substring(std::max(0, static_cast<int>(textInField.length() - MaxLearnTextDataSize)), textInField.length());
     textInField.remove(0, textInField.find(" "));
 
     // Build up the 500 character strings in word chunks.
